# Link-Shortener

./: Makefile  README.md  backend.dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 23dfdacd7d78_create_url_table.py
app/api/: dependencies.py  run.py  services.py
app/api/api_v1/: router.py
app/api/api_v1/endpoints/: base.py
app/configs/: base.py  db.py
app/dal/: __init__.py  url.py
app/db/: base.py
app/models/: url.py
app/schemas/: __init__.py  url.py
env/: .env.example
