[tool.poetry]
name = "link-shortener"
version = "0.1.0"
description = ""
authors = ["Ilya Pestov <skinlinkg01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.45"
fastapi = "^0.88.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
